fix fstring label error in figure 2 script

--- a/code/Figure 2, 4+ Ensemble Analysis and Figure Code.ipynb
+++ b/code/Figure 2, 4+ Ensemble Analysis and Figure Code.ipynb
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
     "    plot_df= tseries_mat.loc[tseries_mat.task_phase_vec == task_stage,:].sort_values(by = 'max_timebin_index', ascending = True).loc[:, numeric_col]\n",
     "    make_cbar = s in [5]\n",
     "    sns.heatmap(plot_df, ax = ax_plot,cbar_kws = {'label': f\"Normalized. event rate\"}, rasterized=True,cbar = make_cbar, vmax = 0.5,cmap = 'Greys',xticklabels=True)\n",
-    "    set_labels(ax_plot, {'title': {'label':f\"{task_stage.replace(\"_\", \" \")}\", 'pad':0 },'xlabel': 'Time from Dig (s)'})\n",
+    "    set_labels(ax_plot, {'title': {'label':task_stage.replace(\"_\", \" \"), 'pad':0 },'xlabel': 'Time from Dig (s)'})\n",
     "    ax_plot.set_yticks([])\n",
     "    # Extract existing tick labels and positions\n",
     "    second_tick_to_plot = ['-3.0s','0.0s', '5.0s', '10.0s','14.0s']\n",
